# Bimo-Engine

./: .gitignore  GameEngine.cpp  GameEngine.hpp  GameObject.cpp  GameObject.hpp  README.md  app  build.sh  lua_binding.cpp  lua_binding.h  main.cpp  script.lua  shape.cpp  shape.h
engine-bindings/: CMakeLists.txt  GameEngine.cpp  GameObject.cpp  GameObject.hpp  README.md
engine-bindings/test_game/: game
engine-bindings/test_game/scripts/: script.lua
engine-editor/: Cargo.toml  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
engine-editor/src/: App.css  App.tsx  app.rs  editor.rs  home.rs  index.css  main.rs
engine-editor/src-tauri/: Cargo.toml  tauri.conf.json
engine-editor/src-tauri/src/: lib.rs
engine-editor/src/components/Button/: Button.module.css  Button.tsx
engine-editor/src/pages/: HomePage.tsx
lua-cppSDL2-embedder/: README.md  lua_binding.cpp  main.cpp  script.lua  shape.cpp  shape.h
lua-cppSDL2-transpiler/: app  build.sh  main.cpp  script.lua
test_game/scripts/: script.lua
